# cplusplus-examples

./: CMakeLists.txt  LICENSE  Makefile  README.md
config/: CMakeLists.txt
config/src/: CMakeLists.txt
config/src/config_sdk/: CMakeLists.txt  ConfigFactory.cpp  ConfigFactory.hpp
config/src/testing/: App.cpp  CMakeLists.txt
plugin-test/: CMakeLists.txt
plugin-test/src/: CMakeLists.txt
plugin-test/src/app/: App.cpp  CMakeLists.txt
plugin-test/src/error_message/: CMakeLists.txt  ErrorMessageApi.hpp
plugin-test/src/hello_world_plugin/: CMakeLists.txt  HelloWorldPlugin.cpp  MyError.hpp  MyPrint.hpp
plugin-test/src/plugin_sdk/: CMakeLists.txt  PluginApi.hpp
plugin-test/src/print_message/: CMakeLists.txt  PrintMessageApi.hpp
